// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Description /> should not render if no data is available 1`] = `
<Description
  html={null}
  navigate={[Function]}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <SurroundPortals
    portalName="PRODUCT_DESCRIPTION"
  >
    <div
      className={
        Object {
          "data-css-1gp4e0e": "",
        }
      }
    >
      <div
        aria-hidden={true}
        className={
          Object {
            "data-css-1qs89bq": "",
          }
        }
      >
        <Text
          string="product.description_heading"
        />
      </div>
      <PlaceholderParagraph
        className="css-11lvu0k"
        ready={false}
      >
        <div
          className={
            Object {
              "data-css-1rl1l79": "",
            }
          }
          data-test-id="description"
        >
          <HtmlSanitizer
            settings={
              Object {
                "handleClick": [Function],
                "html": null,
              }
            }
          />
        </div>
      </PlaceholderParagraph>
    </div>
  </SurroundPortals>
</Description>
`;

exports[`<Description /> should render description if data is available 1`] = `
<Description
  html="<h1>foo</h1>"
  navigate={[Function]}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <SurroundPortals
    portalName="PRODUCT_DESCRIPTION"
  >
    <div
      className={
        Object {
          "data-css-1gp4e0e": "",
        }
      }
    >
      <div
        aria-hidden={true}
        className={
          Object {
            "data-css-1qs89bq": "",
          }
        }
      >
        <Text
          string="product.description_heading"
        />
      </div>
      <PlaceholderParagraph
        className="css-11lvu0k"
        ready={true}
      >
        <div
          className={
            Object {
              "data-css-1rl1l79": "",
            }
          }
          data-test-id="description"
        >
          <HtmlSanitizer
            settings={
              Object {
                "handleClick": [Function],
                "html": "<h1>foo</h1>",
              }
            }
          >
            &lt;h1&gt;foo&lt;/h1&gt;
          </HtmlSanitizer>
        </div>
      </PlaceholderParagraph>
    </div>
  </SurroundPortals>
</Description>
`;
